[workspace]
resolver = "2"
members = [
    "qpet-sperr-sys"
]

[workspace.package]
edition = "2021"
authors = ["Juniper Tyree <juniper.tyree@helsinki.fi>"]
repository = "https://github.com/juntyr/sperr-rs"
license = "MPL-2.0"
rust-version = "1.82"

[workspace.dependencies]
# workspace-internal crates
qpet-sperr = { version = "0.1", path = ".", default-features = false }
qpet-sperr-sys = { version = "0.1.1", path = "qpet-sperr-sys", default-features = false }

# crates.io third-party dependencies
bindgen = { version = "0.72", default-features = false }
cc = { version = "1.2", default-features = false }
cmake = { version = "0.1.45", default-features = false }
gmp-mpfr-sys = { version = "1.6", default-features = false }
ndarray = { version = "0.16", default-features = false }
openmp-sys = { version = "1.2", default-features = false }
thiserror = { version = "2.0", default-features = false }
zstd-sys = { version = "2.0.10", default-features = false }

[workspace.lints.rust]
unsafe_code = "deny"
unstable_features = "forbid"
unused_crate_dependencies = "warn"

missing_docs = "warn"

[workspace.lints.clippy]
complexity = { priority = -1, level = "warn" }
correctness = { priority = -1, level = "warn" }
nursery = { priority = -1, level = "warn" }
pedantic = { priority = -1, level = "warn" }
perf = { priority = -1, level = "warn" }
style = { priority = -1, level = "warn" }
suspicious = { priority = -1, level = "warn" }

unwrap_used = "warn"
expect_used = "warn"
indexing_slicing = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
module_name_repetitions = "allow"

cargo = { priority = -1, level = "warn" }
cargo_common_metadata = "warn"
multiple_crate_versions = "warn"


[package]
name = "qpet-sperr"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

description = "High-level Rust bindings to the QPET-SPERR compressor"
readme = "README.md"
categories = ["api-bindings", "compression", "encoding"]
keywords = ["QPET-SPERR", "compression", "encoding"]

[features]
openmp = ["qpet-sperr-sys/openmp"]

[dependencies]
ndarray = { workspace = true, features = ["std"] }
qpet-sperr-sys = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
