[package]
name = "qpet-sperr-sys"
version = "0.1.1"
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

description = "Low-level Rust bindings to the QPET-SPERR compressor"
readme = "README.md"
categories = ["api-bindings", "compression", "encoding"]
keywords = ["QPET-SPERR", "bindgen", "compression", "encoding"]

links = "QPET-SPERR"

exclude = ["/QPET-Artifact/.github", "/QPET-Artifact/docker", "/QPET-Artifact/evaluations", "/QPET-Artifact/examples", "/QPET-Artifact/handout", "/QPET-Artifact/test_data", "/QPET-Artifact/test_scripts", "/QPET-Artifact/utilities"]

[features]
openmp = ["dep:openmp-sys"]

[dependencies]
gmp-mpfr-sys = { workspace = true, features = ["c-no-tests"] }
openmp-sys = { workspace = true, optional = true }
zstd-sys = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gmp-mpfr-sys = { workspace = true, features = ["force-cross"] }

[build-dependencies]
bindgen = { workspace = true, features = ["runtime"] }
cc = { workspace = true }
cmake = { workspace = true }

[lints]
workspace = true
