[package]
name = "qpet-sperr-sys"
version = "0.2.0"
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

description = "Low-level Rust bindings to the QPET-SPERR compressor"
readme = "README.md"
categories = ["api-bindings", "compression", "encoding"]
keywords = ["QPET-SPERR", "bindgen", "compression", "encoding"]

links = "QPET-SPERR"

exclude = [
    "/SPERR/.github", "/SPERR/docker", "/SPERR/evaluations", "/SPERR/examples",
    "/SPERR/handout", "/SPERR/test_data", "/SPERR/test_scripts",
    "/SPERR/utilities", "/SPERR/zstd",
    "/SPERR/symengine/.github", "/SPERR/symengine/benchmarks",
    "/SPERR/symengine/bin", "/SPERR/symengine/binder", "/SPERR/symengine/docs",
    "/SPERR/symengine/symengine/tests",
]

[features]
openmp = ["dep:openmp-sys"]

[dependencies]
gmp-mpfr-sys = { workspace = true, features = ["c-no-tests"] }
openmp-sys = { workspace = true, optional = true }
zstd-sys = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gmp-mpfr-sys = { workspace = true, features = ["force-cross"] }

[build-dependencies]
bindgen = { workspace = true, features = ["runtime"] }
cc = { workspace = true }
cmake = { workspace = true }

[lints]
workspace = true
